Fix scrollbars
* Remove extra scroll on linux
* Square off
* Add active background

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -9,8 +9,6 @@ atom-workspace {
 // Scrollbars
 .scrollbars-visible-always {
 	/deep/ ::-webkit-scrollbar {
-		// width: @component-padding;
-		// height: @component-padding;
 		width: 1em;
 		height: 1em;
 	}
@@ -20,8 +18,6 @@ atom-workspace {
 	}
 
 	/deep/ ::-webkit-scrollbar-thumb {
-		border-radius: @component-padding;
-		border: 3px solid @scrollbar-background-color;
 		background: @scrollbar-color;
 		background-clip: content-box;
 	}
@@ -30,10 +26,11 @@ atom-workspace {
 		background: @scrollbar-background-color;
 	}
 
-	/deep/ ::-webkit-scrollbar-thumb:vertical:active {
-		border-radius: 0;
-		border-left-width: 0;
-		border-right-width: 0;
+	/deep/ ::-webkit-scrollbar-thumb:vertical {
+		&:hover,
+		&:active {
+			background: @scrollbar-active-color;
+		}
 	}
 
 	/deep/ ::-webkit-scrollbar-thumb:horizontal:active {
