--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -7,6 +7,7 @@
 
 atom-pane .item-views {
   border-top: 6px solid @base-background-color;
+  overflow: hidden;
 }
 
 .tab-bar {
