--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -119,7 +119,8 @@
 @checkbox-background-color:        fade(@base-accent-color, 33%);
 
 @scrollbar-color:                  @level-1-color;
-@scrollbar-background-color:       @level-3-color; // replaced `transparent` with a solid color to test https://github.com/atom/one-light-ui/issues/4
+@scrollbar-active-color:           @charcoal;
+@scrollbar-background-color:       @level-3-color;
 
 
 // Utilities
